trivial: Fix the spacing of the webapp warning on the details page

--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -203,6 +203,10 @@
 	font-size: 125%;
 }
 
+.application-details-webapp-warning {
+	font-weight: bold;
+}
+
 .application-details-summary {
 }
 
